--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,11 +2,11 @@
 <div class="section-wrapper">
     <section class="section about" id="about">
         <div>
-            <div class="section-heading" id="about-text">Welcome to Boat Corporation!</div>
+            <div class="section-heading" id="about-text">Welcome to Boat Corporation's game V2!</div>
 
             <div class="about-grid">
                     <p class="paragraph-text center-align">
-                        This is our website for boat corporation's documentation.
+                        This is our website for Boat Game V2's documentation.
                         <h2>On this website you will find our:</h2>
                         <h3>Requirements document</h3>
                         <h3>Architecture document</h3>
