--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
             <div class="about-grid">
                     <p class="paragraph-text center-align">
                         This is our website for Boat Game V2's documentation.
-                        <h2>On this website you will find our:</h2>
+                        <h2><a href= 'assets/files/Req1.pdf'>On this website you will find our:</a></h2>
                         <h3>Requirements document</h3>
                         <h3>Architecture document</h3>
                         <h3>Method selection and planning document</h3>
