--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
                     <p class="paragraph-text center-align">
                         This is our website for Boat Game V2's documentation.
                         <a href = "assets/files/Req1.pdf"><h2>On this website you will find our:</h2></a>
-                        <h3>Requirements document</h3>
+                        <a href="assets/files/Req1.pdf"><h3>Requirements document</h3></a>
                         <h3>Architecture document</h3>
                         <h3>Method selection and planning document</h3>
                         <h3>Risk assessment and mitigation document</h3>
