--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,14 +6,15 @@
 
             <div class="about-grid">
                     <p class="paragraph-text center-align">
-                        This is our website for Boat Game V2's documentation.
-                        <a href = "assets/files/Req1.pdf"><h2>On this TESTING you will find our:</h2></a>
-                        <a href="assets/files/Req1.pdf">ff</a>
-                        <a href="assets/files/Req1.pdf"><h3>Requirements document</h3></a>
-                        <h3>Architecture document</h3>
-                        <h3>Method selection and planning document</h3>
-                        <h3>Risk assessment and mitigation document</h3>
-                        <h3>Implementation document</h3>
+                        This is our website for our Boat Game's documentation.
+                        <h2>New documents</h2>
+                        <a href="assets/files/new/Architecture.pdf"><h3>Architecture</h3></a>
+                        <a href="assets/files/new/Changereport.pdf"><h3>Change Report</h3></a>
+                        <a href="assets/files/new/continuousintegration.pdf"><h3>Continuous Integration Report</h3></a>
+                        <a href="assets/files/new/implementation.pdf"><h3>Implementation</h3></a>
+                        <a href="assets/files/new/methodplanning.pdf"><h3>Method Planning Report</h3></a>
+                        <a href="assets/files/new/requirements.pdf"><h3>Requirements</h3></a>
+                        <a href="assets/files/new/riskregister.pdf"><h3>Risk Register Report</h3></a>
                     </p>
             </div>
             </div>
