--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,11 +2,11 @@
 <div class="section-wrapper">
     <section class="section about" id="about">
         <div>
-            <div class="section-heading" id="about-text">Welcome to Boat Corporation's game V2!</div>
+            <div class="section-heading" id="about-text">Welcome to Boat Corporation's game</div>
 
             <div class="about-grid">
                     <p class="paragraph-text center-align">
-                        This is our website for our Boat Game's documentation.
+                        This is our website for our Boat Game's documentation - version 1 and version 2.
                         <h2>New documents</h2>
                         <a href="assets/files/new/Architecture.pdf"><h3>Architecture</h3></a>
                         <a href="assets/files/new/Changereport.pdf"><h3>Change Report</h3></a>
