--- a/_includes/documents.html
+++ b/_includes/documents.html
@@ -1,7 +1,7 @@
 <div class="section-wrapper">
     <section class="section documents" id="documents">
         <div class="full-width">
-            <div class="section-heading" id="featured-projects-text">Documents</div>
+            <div class="section-heading" id="featured-projects-text">Boatgame version 1 documents</div>
 
             <div class="projects-wrapper">
             <!-- filled in by js -->
