--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
             <div class="about-grid">
                     <p class="paragraph-text center-align">
                         This is our website for our Boat Game's documentation - version 1 and version 2.
-                        <h2>New documents</h2>
+                        <h2>New documents - click the links below to be taken to the relevant document</h2>
                         <a href="assets/files/new/Architecture.pdf"><h3>Architecture</h3></a>
                         <a href="assets/files/new/Changereport.pdf"><h3>Change Report</h3></a>
                         <a href="assets/files/new/continuousintegration.pdf"><h3>Continuous Integration Report</h3></a>
