--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -13,7 +13,7 @@
                     <h3>Charlotte Gayton</h3>
                     <h3>Will Johnson</h3>
                     <h3>Arslan Amjad</h3>
-                    <h3>Josh</h3>
+                    <h3>Josh Whitehurst</h3>
             </p>
         </div>
     </section>
