--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
         <div class="head-menu-wrap">
             <a class="semi-transparent-button with-border nav-links" href="#about">ABOUT</a>
             <a class="semi-transparent-button with-border nav-links" href="#documents">DOCUMENTS</a>
-            <a class="semi-transparent-button with-border nav-links" href=""assets/files/jarfile.jar>Jar File</a>
+            <a class="semi-transparent-button with-border nav-links" href=""assets/files/jarfile.jar download="">Jar File</a>
             <a class="semi-transparent-button with-border nav-links" href="https://github.com/boatcorporation/boatgamev2-electricboogaloo">OUR GITHUB</a>
         </div>
     </div>
