--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
                         <a href="assets/files/new/methodplanning.pdf"><h3>Method Planning Report</h3></a>
                         <a href="assets/files/new/requirements.pdf"><h3>Requirements</h3></a>
                         <a href="assets/files/new/riskregister.pdf"><h3>Risk Register Report</h3></a>
-                        <a href="assets/files/jarfile.jar" download><h3>Jar file</h3></a>
+                        <a href="assets/files/jarfile.jar" download><h3>Jar File</h3></a>
 
                     </p>
             </div>
